@@ -48,7 +48,7 @@ copyright = '2012, holger krekel and others'
 import execnet
 version = "1.1"
 # The full version, including alpha/beta/rc tags.
-release = version
+release = "1.1.1"
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
