@@ -3,7 +3,7 @@ execnet: pure python lib for connecting to local and remote Python Interpreters.
 
 (c) 2012, Holger Krekel and others
 """
-__version__ = '1.1.1dev6'
+__version__ = '1.1.1'
 
 import execnet.apipkg
 
